--- a/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
+++ b/web/themes/quartiers_solidaires/assets/components/organisms/modal/modal.scss
@@ -43,6 +43,7 @@
 }
 
 .modal-content {
+  display: block;
   flex: 1 0 100%;
   position: static;
   height: 100%;
@@ -130,6 +131,14 @@
 .modal-footer {
   flex-shrink: 0;
   border-radius: $border-radius-lg;
+
+  * {
+    pointer-events: none;
+  }
+
+  .btn {
+    pointer-events: auto;
+  }
 
   @include media-breakpoint-down(xs) {
     flex-wrap: wrap;
